// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Multiselect renders empty closed 1`] = `
.c3 {
  width: 0;
  height: 0;
  border-left: 4px solid transparent;
  border-right: 4px solid transparent;
  border-top: 4px solid #ccc;
  display: inline-block;
  margin: 0 0 0 0.402rem;
  padding: 0;
}

.c1 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  cursor: default;
  border: 1px solid #d8d8d8;
  background-color: #ffffff;
  margin: 0;
  padding: 0.402rem 0.694rem 0.402rem 0.694rem;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif;
  border-top-left-radius: !important;
  border-top-right-radius: !important;
  border-bottom-left-radius: !important;
  border-bottom-right-radius: !important;
}

.c2 {
  color: #ccc;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}

.c0 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  position: relative;
  width: 100%;
  max-width: 100%;
  margin: 0;
  padding: 0;
}

<div>
  <div
    className="c0"
  >
    <div
      className="c1"
      onClick={[Function]}
    >
      <span
        className="c2"
      >
        Select an item
      </span>
      <div
        className="c3"
      />
    </div>
  </div>
</div>
`;

exports[`Multiselect renders empty opened 1`] = `
.c3 {
  width: 0;
  height: 0;
  border-left: 4px solid transparent;
  border-right: 4px solid transparent;
  border-bottom: 4px solid #ccc;
  display: inline-block;
  margin: 0 0 0 0.402rem;
  padding: 0;
}

.c1 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  cursor: default;
  border: 1px solid #d8d8d8;
  background-color: #ffffff;
  margin: 0;
  padding: 0.402rem 0.694rem 0.402rem 0.694rem;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif;
  border-top-left-radius: !important;
  border-top-right-radius: !important;
  border-bottom-left-radius: 0 !important;
  border-bottom-right-radius: 0 !important;
}

.c2 {
  color: #ccc;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}

.c4 {
  border: 1px solid #d8d8d8;
  background-color: #ffffff;
  box-sizing: border-box;
  position: absolute;
  top: 100%;
  left: 0;
  z-index: 1;
  width: 100%;
  min-width: 100%;
  max-width: 100%;
  height: auto;
  max-height: auto;
  margin: 0;
  padding: 0;
  border-top: none !important;
  border-top-left-radius: 0 !important;
  border-top-right-radius: 0 !important;
  overflow: hidden;
  overflow-y: hidden;
  -webkit-overflow-scrolling: touch;
}

.c5 {
  color: #ccc;
  margin: 0;
  padding: 0.402rem 0.694rem 0.402rem 0.694rem;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif;
  text-align: center;
}

.c0 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  position: relative;
  width: 100%;
  max-width: 100%;
  margin: 0;
  padding: 0;
}

<div>
  <div
    className="c0"
  >
    <div
      className="c1"
      onClick={[Function]}
    >
      <span
        className="c2"
      >
        Select an item
      </span>
      <div
        className="c3"
      />
    </div>
    <div
      className="c4"
      onClick={[Function]}
    >
      <div
        className="c5"
      >
        No items
      </div>
    </div>
  </div>
</div>
`;

exports[`Multiselect renders empty with custom placeholders 1`] = `
.c3 {
  width: 0;
  height: 0;
  border-left: 4px solid transparent;
  border-right: 4px solid transparent;
  border-bottom: 4px solid #ccc;
  display: inline-block;
  margin: 0 0 0 0.402rem;
  padding: 0;
}

.c1 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  cursor: default;
  border: 1px solid #d8d8d8;
  background-color: #ffffff;
  margin: 0;
  padding: 0.402rem 0.694rem 0.402rem 0.694rem;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif;
  border-top-left-radius: !important;
  border-top-right-radius: !important;
  border-bottom-left-radius: 0 !important;
  border-bottom-right-radius: 0 !important;
}

.c2 {
  color: #ccc;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}

.c4 {
  border: 1px solid #d8d8d8;
  background-color: #ffffff;
  box-sizing: border-box;
  position: absolute;
  top: 100%;
  left: 0;
  z-index: 1;
  width: 100%;
  min-width: 100%;
  max-width: 100%;
  height: auto;
  max-height: auto;
  margin: 0;
  padding: 0;
  border-top: none !important;
  border-top-left-radius: 0 !important;
  border-top-right-radius: 0 !important;
  overflow: hidden;
  overflow-y: hidden;
  -webkit-overflow-scrolling: touch;
}

.c5 {
  color: #ccc;
  margin: 0;
  padding: 0.402rem 0.694rem 0.402rem 0.694rem;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif;
  text-align: center;
}

.c0 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  position: relative;
  width: 100%;
  max-width: 100%;
  margin: 0;
  padding: 0;
}

<div>
  <div
    className="c0"
  >
    <div
      className="c1"
      onClick={[Function]}
    >
      <span
        className="c2"
      >
        Custom placeholder
      </span>
      <div
        className="c3"
      />
    </div>
    <div
      className="c4"
      onClick={[Function]}
    >
      <div
        className="c5"
      >
        Custom empty placeholder
      </div>
    </div>
  </div>
</div>
`;

exports[`Multiselect renders selected items count in select box 1`] = `
.c3 {
  width: 0;
  height: 0;
  border-left: 4px solid transparent;
  border-right: 4px solid transparent;
  border-top: 4px solid #ccc;
  display: inline-block;
  margin: 0 0 0 0.402rem;
  padding: 0;
}

.c1 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  cursor: default;
  border: 1px solid #d8d8d8;
  background-color: #ffffff;
  margin: 0;
  padding: 0.402rem 0.694rem 0.402rem 0.694rem;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif;
  border-top-left-radius: !important;
  border-top-right-radius: !important;
  border-bottom-left-radius: !important;
  border-bottom-right-radius: !important;
}

.c2 {
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}

.c0 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  position: relative;
  width: 100%;
  max-width: 100%;
  margin: 0;
  padding: 0;
}

<div>
  <div
    className="c0"
  >
    <div
      className="c1"
      onClick={[Function]}
    >
      <span
        className="c2"
      >
        <span>
          Select an item (2)
        </span>
      </span>
      <div
        className="c3"
      />
    </div>
  </div>
</div>
`;

exports[`Multiselect renders selected items in select box 1`] = `
.c3 {
  width: 0;
  height: 0;
  border-left: 4px solid transparent;
  border-right: 4px solid transparent;
  border-top: 4px solid #ccc;
  display: inline-block;
  margin: 0 0 0 0.402rem;
  padding: 0;
}

.c1 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  cursor: default;
  border: 1px solid #d8d8d8;
  background-color: #ffffff;
  margin: 0;
  padding: 0.402rem 0.694rem 0.402rem 0.694rem;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif;
  border-top-left-radius: !important;
  border-top-right-radius: !important;
  border-bottom-left-radius: !important;
  border-bottom-right-radius: !important;
}

.c2 {
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}

.c0 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  position: relative;
  width: 100%;
  max-width: 100%;
  margin: 0;
  padding: 0;
}

<div>
  <div
    className="c0"
  >
    <div
      className="c1"
      onClick={[Function]}
    >
      <span
        className="c2"
      >
        <span>
          Item 2, 
        </span>
        <span>
          Item 3
        </span>
      </span>
      <div
        className="c3"
      />
    </div>
  </div>
</div>
`;

exports[`Multiselect renders with fixed height 1`] = `
.c3 {
  width: 0;
  height: 0;
  border-left: 4px solid transparent;
  border-right: 4px solid transparent;
  border-bottom: 4px solid #ccc;
  display: inline-block;
  margin: 0 0 0 0.402rem;
  padding: 0;
}

.c7 {
  display: inline-block;
  margin: 0 0 0 0.402rem;
  padding: 0;
  visibility: hidden;
}

.c7:after {
  content: '';
  display: block;
  width: 4px;
  height: 9px;
  border: solid #ccc;
  border-width: 0 2px 2px 0;
  -webkit-transform: rotate(45deg);
  -ms-transform: rotate(45deg);
  transform: rotate(45deg);
}

.c1 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  cursor: default;
  border: 1px solid #d8d8d8;
  background-color: #ffffff;
  margin: 0;
  padding: 0.402rem 0.694rem 0.402rem 0.694rem;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif;
  border-top-left-radius: !important;
  border-top-right-radius: !important;
  border-bottom-left-radius: 0 !important;
  border-bottom-right-radius: 0 !important;
}

.c2 {
  color: #ccc;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}

.c5 {
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif;
  margin: 0;
  padding: 0.402rem 0.694rem 0.402rem 0.694rem;
}

.c5:hover {
  background-color: #f7f7f7;
}

.c6 {
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}

.c4 {
  border: 1px solid #d8d8d8;
  background-color: #ffffff;
  box-sizing: border-box;
  position: absolute;
  top: 100%;
  left: 0;
  z-index: 1;
  width: 100%;
  min-width: 100%;
  max-width: 100%;
  height: 400px;
  max-height: 400px;
  margin: 0;
  padding: 0;
  border-top: none !important;
  border-top-left-radius: 0 !important;
  border-top-right-radius: 0 !important;
  overflow: hidden;
  overflow-y: scroll;
  -webkit-overflow-scrolling: touch;
}

.c0 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  position: relative;
  width: 100%;
  max-width: 100%;
  margin: 0;
  padding: 0;
}

<div>
  <div
    className="c0"
  >
    <div
      className="c1"
      onClick={[Function]}
    >
      <span
        className="c2"
      >
        Select an item
      </span>
      <div
        className="c3"
      />
    </div>
    <div
      className="c4"
      onClick={[Function]}
    >
      <div
        className="c5"
        onClick={[Function]}
      >
        <span
          className="c6"
        >
          Item 1
        </span>
        <div
          className="c7"
        />
      </div>
      <div
        className="c5"
        onClick={[Function]}
      >
        <span
          className="c6"
        >
          Item 2
        </span>
        <div
          className="c7"
        />
      </div>
      <div
        className="c5"
        onClick={[Function]}
      >
        <span
          className="c6"
        >
          Item 3
        </span>
        <div
          className="c7"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Multiselect renders with fixed width 1`] = `
.c3 {
  width: 0;
  height: 0;
  border-left: 4px solid transparent;
  border-right: 4px solid transparent;
  border-bottom: 4px solid #ccc;
  display: inline-block;
  margin: 0 0 0 0.402rem;
  padding: 0;
}

.c7 {
  display: inline-block;
  margin: 0 0 0 0.402rem;
  padding: 0;
  visibility: hidden;
}

.c7:after {
  content: '';
  display: block;
  width: 4px;
  height: 9px;
  border: solid #ccc;
  border-width: 0 2px 2px 0;
  -webkit-transform: rotate(45deg);
  -ms-transform: rotate(45deg);
  transform: rotate(45deg);
}

.c1 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  cursor: default;
  border: 1px solid #d8d8d8;
  background-color: #ffffff;
  margin: 0;
  padding: 0.402rem 0.694rem 0.402rem 0.694rem;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif;
  border-top-left-radius: !important;
  border-top-right-radius: !important;
  border-bottom-left-radius: 0 !important;
  border-bottom-right-radius: 0 !important;
}

.c2 {
  color: #ccc;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}

.c5 {
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif;
  margin: 0;
  padding: 0.402rem 0.694rem 0.402rem 0.694rem;
}

.c5:hover {
  background-color: #f7f7f7;
}

.c6 {
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}

.c4 {
  border: 1px solid #d8d8d8;
  background-color: #ffffff;
  box-sizing: border-box;
  position: absolute;
  top: 100%;
  left: 0;
  z-index: 1;
  width: 400px;
  min-width: 100%;
  max-width: 400px;
  height: auto;
  max-height: auto;
  margin: 0;
  padding: 0;
  border-top: none !important;
  border-top-left-radius: 0 !important;
  border-top-right-radius: 0 !important;
  overflow: hidden;
  overflow-y: hidden;
  -webkit-overflow-scrolling: touch;
}

.c0 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  position: relative;
  width: 400px;
  max-width: 400px;
  margin: 0;
  padding: 0;
}

<div>
  <div
    className="c0"
  >
    <div
      className="c1"
      onClick={[Function]}
    >
      <span
        className="c2"
      >
        Select an item
      </span>
      <div
        className="c3"
      />
    </div>
    <div
      className="c4"
      onClick={[Function]}
    >
      <div
        className="c5"
        onClick={[Function]}
      >
        <span
          className="c6"
        >
          Item 1
        </span>
        <div
          className="c7"
        />
      </div>
      <div
        className="c5"
        onClick={[Function]}
      >
        <span
          className="c6"
        >
          Item 2
        </span>
        <div
          className="c7"
        />
      </div>
      <div
        className="c5"
        onClick={[Function]}
      >
        <span
          className="c6"
        >
          Item 3
        </span>
        <div
          className="c7"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Multiselect renders with no items selected 1`] = `
.c3 {
  width: 0;
  height: 0;
  border-left: 4px solid transparent;
  border-right: 4px solid transparent;
  border-bottom: 4px solid #ccc;
  display: inline-block;
  margin: 0 0 0 0.402rem;
  padding: 0;
}

.c7 {
  display: inline-block;
  margin: 0 0 0 0.402rem;
  padding: 0;
  visibility: hidden;
}

.c7:after {
  content: '';
  display: block;
  width: 4px;
  height: 9px;
  border: solid #ccc;
  border-width: 0 2px 2px 0;
  -webkit-transform: rotate(45deg);
  -ms-transform: rotate(45deg);
  transform: rotate(45deg);
}

.c1 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  cursor: default;
  border: 1px solid #d8d8d8;
  background-color: #ffffff;
  margin: 0;
  padding: 0.402rem 0.694rem 0.402rem 0.694rem;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif;
  border-top-left-radius: !important;
  border-top-right-radius: !important;
  border-bottom-left-radius: 0 !important;
  border-bottom-right-radius: 0 !important;
}

.c2 {
  color: #ccc;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}

.c5 {
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif;
  margin: 0;
  padding: 0.402rem 0.694rem 0.402rem 0.694rem;
}

.c5:hover {
  background-color: #f7f7f7;
}

.c6 {
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}

.c4 {
  border: 1px solid #d8d8d8;
  background-color: #ffffff;
  box-sizing: border-box;
  position: absolute;
  top: 100%;
  left: 0;
  z-index: 1;
  width: 100%;
  min-width: 100%;
  max-width: 100%;
  height: auto;
  max-height: auto;
  margin: 0;
  padding: 0;
  border-top: none !important;
  border-top-left-radius: 0 !important;
  border-top-right-radius: 0 !important;
  overflow: hidden;
  overflow-y: hidden;
  -webkit-overflow-scrolling: touch;
}

.c0 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  position: relative;
  width: 100%;
  max-width: 100%;
  margin: 0;
  padding: 0;
}

<div>
  <div
    className="c0"
  >
    <div
      className="c1"
      onClick={[Function]}
    >
      <span
        className="c2"
      >
        Select an item
      </span>
      <div
        className="c3"
      />
    </div>
    <div
      className="c4"
      onClick={[Function]}
    >
      <div
        className="c5"
        onClick={[Function]}
      >
        <span
          className="c6"
        >
          Item 1
        </span>
        <div
          className="c7"
        />
      </div>
      <div
        className="c5"
        onClick={[Function]}
      >
        <span
          className="c6"
        >
          Item 2
        </span>
        <div
          className="c7"
        />
      </div>
      <div
        className="c5"
        onClick={[Function]}
      >
        <span
          className="c6"
        >
          Item 3
        </span>
        <div
          className="c7"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Multiselect renders with responsive spacing 1`] = `
.c3 {
  width: 0;
  height: 0;
  border-left: 4px solid transparent;
  border-right: 4px solid transparent;
  border-bottom: 4px solid #ccc;
  display: inline-block;
  margin: 0 0 0 0.402rem;
  padding: 0;
}

.c7 {
  display: inline-block;
  margin: 0 0 0 0.402rem;
  padding: 0;
  visibility: hidden;
}

.c7:after {
  content: '';
  display: block;
  width: 4px;
  height: 9px;
  border: solid #ccc;
  border-width: 0 2px 2px 0;
  -webkit-transform: rotate(45deg);
  -ms-transform: rotate(45deg);
  transform: rotate(45deg);
}

.c9 {
  display: inline-block;
  margin: 0 0 0 0.402rem;
  padding: 0;
  visibility: visible;
}

.c9:after {
  content: '';
  display: block;
  width: 4px;
  height: 9px;
  border: solid #ccc;
  border-width: 0 2px 2px 0;
  -webkit-transform: rotate(45deg);
  -ms-transform: rotate(45deg);
  transform: rotate(45deg);
}

.c1 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  cursor: default;
  border: 1px solid #d8d8d8;
  background-color: #ffffff;
  margin: 0;
  padding: xs;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif;
  border-top-left-radius: !important;
  border-top-right-radius: !important;
  border-bottom-left-radius: 0 !important;
  border-bottom-right-radius: 0 !important;
}

.c2 {
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}

.c5 {
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif;
  margin: 0;
  padding: xs;
}

.c5:hover {
  background-color: #f7f7f7;
}

.c8 {
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #f7f7f7;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif;
  margin: 0;
  padding: xs;
}

.c8:hover {
  background-color: #f7f7f7;
}

.c6 {
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}

.c4 {
  border: 1px solid #d8d8d8;
  background-color: #ffffff;
  box-sizing: border-box;
  position: absolute;
  top: 100%;
  left: 0;
  z-index: 1;
  width: 100%;
  min-width: 100%;
  max-width: 100%;
  height: auto;
  max-height: auto;
  margin: 0;
  padding: 0;
  border-top: none !important;
  border-top-left-radius: 0 !important;
  border-top-right-radius: 0 !important;
  overflow: hidden;
  overflow-y: hidden;
  -webkit-overflow-scrolling: touch;
}

.c0 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  position: relative;
  width: 100%;
  max-width: 100%;
  margin: xs;
  padding: 0;
}

@media only screen and (min-width:48rem) {
  .c1 {
    padding: sm;
  }
}

@media only screen and (min-width:64rem) {
  .c1 {
    padding: md;
  }
}

@media only screen and (min-width:75rem) {
  .c1 {
    padding: lg;
  }
}

@media only screen and (min-width:48rem) {
  .c5 {
    padding: sm;
  }
}

@media only screen and (min-width:64rem) {
  .c5 {
    padding: md;
  }
}

@media only screen and (min-width:75rem) {
  .c5 {
    padding: lg;
  }
}

@media only screen and (min-width:48rem) {
  .c8 {
    padding: sm;
  }
}

@media only screen and (min-width:64rem) {
  .c8 {
    padding: md;
  }
}

@media only screen and (min-width:75rem) {
  .c8 {
    padding: lg;
  }
}

@media only screen and (min-width:48rem) {
  .c0 {
    margin: sm;
  }
}

@media only screen and (min-width:64rem) {
  .c0 {
    margin: md;
  }
}

@media only screen and (min-width:75rem) {
  .c0 {
    margin: lg;
  }
}

<div>
  <div
    className="c0"
  >
    <div
      className="c1"
      onClick={[Function]}
    >
      <span
        className="c2"
      >
        <span>
          Item 2, 
        </span>
        <span>
          Item 3
        </span>
      </span>
      <div
        className="c3"
      />
    </div>
    <div
      className="c4"
      onClick={[Function]}
    >
      <div
        className="c5"
        onClick={[Function]}
      >
        <span
          className="c6"
        >
          Item 1
        </span>
        <div
          className="c7"
        />
      </div>
      <div
        className="c8"
        onClick={[Function]}
      >
        <span
          className="c6"
        >
          Item 2
        </span>
        <div
          className="c9"
        />
      </div>
      <div
        className="c8"
        onClick={[Function]}
      >
        <span
          className="c6"
        >
          Item 3
        </span>
        <div
          className="c9"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Multiselect renders with some items selected 1`] = `
.c3 {
  width: 0;
  height: 0;
  border-left: 4px solid transparent;
  border-right: 4px solid transparent;
  border-bottom: 4px solid #ccc;
  display: inline-block;
  margin: 0 0 0 0.402rem;
  padding: 0;
}

.c7 {
  display: inline-block;
  margin: 0 0 0 0.402rem;
  padding: 0;
  visibility: hidden;
}

.c7:after {
  content: '';
  display: block;
  width: 4px;
  height: 9px;
  border: solid #ccc;
  border-width: 0 2px 2px 0;
  -webkit-transform: rotate(45deg);
  -ms-transform: rotate(45deg);
  transform: rotate(45deg);
}

.c9 {
  display: inline-block;
  margin: 0 0 0 0.402rem;
  padding: 0;
  visibility: visible;
}

.c9:after {
  content: '';
  display: block;
  width: 4px;
  height: 9px;
  border: solid #ccc;
  border-width: 0 2px 2px 0;
  -webkit-transform: rotate(45deg);
  -ms-transform: rotate(45deg);
  transform: rotate(45deg);
}

.c1 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  cursor: default;
  border: 1px solid #d8d8d8;
  background-color: #ffffff;
  margin: 0;
  padding: 0.402rem 0.694rem 0.402rem 0.694rem;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif;
  border-top-left-radius: !important;
  border-top-right-radius: !important;
  border-bottom-left-radius: 0 !important;
  border-bottom-right-radius: 0 !important;
}

.c2 {
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}

.c5 {
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif;
  margin: 0;
  padding: 0.402rem 0.694rem 0.402rem 0.694rem;
}

.c5:hover {
  background-color: #f7f7f7;
}

.c8 {
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #f7f7f7;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif;
  margin: 0;
  padding: 0.402rem 0.694rem 0.402rem 0.694rem;
}

.c8:hover {
  background-color: #f7f7f7;
}

.c6 {
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}

.c4 {
  border: 1px solid #d8d8d8;
  background-color: #ffffff;
  box-sizing: border-box;
  position: absolute;
  top: 100%;
  left: 0;
  z-index: 1;
  width: 100%;
  min-width: 100%;
  max-width: 100%;
  height: auto;
  max-height: auto;
  margin: 0;
  padding: 0;
  border-top: none !important;
  border-top-left-radius: 0 !important;
  border-top-right-radius: 0 !important;
  overflow: hidden;
  overflow-y: hidden;
  -webkit-overflow-scrolling: touch;
}

.c0 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  position: relative;
  width: 100%;
  max-width: 100%;
  margin: 0;
  padding: 0;
}

<div>
  <div
    className="c0"
  >
    <div
      className="c1"
      onClick={[Function]}
    >
      <span
        className="c2"
      >
        <span>
          Item 2, 
        </span>
        <span>
          Item 3
        </span>
      </span>
      <div
        className="c3"
      />
    </div>
    <div
      className="c4"
      onClick={[Function]}
    >
      <div
        className="c5"
        onClick={[Function]}
      >
        <span
          className="c6"
        >
          Item 1
        </span>
        <div
          className="c7"
        />
      </div>
      <div
        className="c8"
        onClick={[Function]}
      >
        <span
          className="c6"
        >
          Item 2
        </span>
        <div
          className="c9"
        />
      </div>
      <div
        className="c8"
        onClick={[Function]}
      >
        <span
          className="c6"
        >
          Item 3
        </span>
        <div
          className="c9"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Multiselect renders with spacing 1`] = `
.c3 {
  width: 0;
  height: 0;
  border-left: 4px solid transparent;
  border-right: 4px solid transparent;
  border-bottom: 4px solid #ccc;
  display: inline-block;
  margin: 0 0 0 0.402rem;
  padding: 0;
}

.c7 {
  display: inline-block;
  margin: 0 0 0 0.402rem;
  padding: 0;
  visibility: hidden;
}

.c7:after {
  content: '';
  display: block;
  width: 4px;
  height: 9px;
  border: solid #ccc;
  border-width: 0 2px 2px 0;
  -webkit-transform: rotate(45deg);
  -ms-transform: rotate(45deg);
  transform: rotate(45deg);
}

.c9 {
  display: inline-block;
  margin: 0 0 0 0.402rem;
  padding: 0;
  visibility: visible;
}

.c9:after {
  content: '';
  display: block;
  width: 4px;
  height: 9px;
  border: solid #ccc;
  border-width: 0 2px 2px 0;
  -webkit-transform: rotate(45deg);
  -ms-transform: rotate(45deg);
  transform: rotate(45deg);
}

.c1 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  cursor: default;
  border: 1px solid #d8d8d8;
  background-color: #ffffff;
  margin: 0;
  padding: md;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif;
  border-top-left-radius: !important;
  border-top-right-radius: !important;
  border-bottom-left-radius: 0 !important;
  border-bottom-right-radius: 0 !important;
}

.c2 {
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}

.c5 {
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif;
  margin: 0;
  padding: md;
}

.c5:hover {
  background-color: #f7f7f7;
}

.c8 {
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #f7f7f7;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif;
  margin: 0;
  padding: md;
}

.c8:hover {
  background-color: #f7f7f7;
}

.c6 {
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}

.c4 {
  border: 1px solid #d8d8d8;
  background-color: #ffffff;
  box-sizing: border-box;
  position: absolute;
  top: 100%;
  left: 0;
  z-index: 1;
  width: 100%;
  min-width: 100%;
  max-width: 100%;
  height: auto;
  max-height: auto;
  margin: 0;
  padding: 0;
  border-top: none !important;
  border-top-left-radius: 0 !important;
  border-top-right-radius: 0 !important;
  overflow: hidden;
  overflow-y: hidden;
  -webkit-overflow-scrolling: touch;
}

.c0 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  position: relative;
  width: 100%;
  max-width: 100%;
  margin: xl;
  padding: 0;
}

<div>
  <div
    className="c0"
  >
    <div
      className="c1"
      onClick={[Function]}
    >
      <span
        className="c2"
      >
        <span>
          Item 2, 
        </span>
        <span>
          Item 3
        </span>
      </span>
      <div
        className="c3"
      />
    </div>
    <div
      className="c4"
      onClick={[Function]}
    >
      <div
        className="c5"
        onClick={[Function]}
      >
        <span
          className="c6"
        >
          Item 1
        </span>
        <div
          className="c7"
        />
      </div>
      <div
        className="c8"
        onClick={[Function]}
      >
        <span
          className="c6"
        >
          Item 2
        </span>
        <div
          className="c9"
        />
      </div>
      <div
        className="c8"
        onClick={[Function]}
      >
        <span
          className="c6"
        >
          Item 3
        </span>
        <div
          className="c9"
        />
      </div>
    </div>
  </div>
</div>
`;
